<resources>
    <string name="app_name">AppShop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Home">หน้าแรก</string>
    <string name="Login">เข้าสู่ระบบ</string>
    <string name="Check">ตรวจสอบ</string>
    <string name="Cate">สินค้าตามประเภท</string>
    <string name="Contact">ติดต่อเรา</string>
    <string name="About">เกี่ยวกับ</string>
    <string name="title_activity_login">เข้าสู่ระบบ</string>
    <string name="title_activity_check">ตรวจสอบราคา</string>
    <string name="title_activity_cast">สินค้าตามประเภท</string>
    <string name="title_activity_contact">ติดต่อเรา</string>
    <string name="title_activity_about">เกี่ยวกับ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_signup">สมัครสมาชิกร้านค้า</string>
    <string name="sigupms">สมัครสมาชิก</string>
    <string name="forgetpass">ลืมรหัสผ่าน</string>
</resources>
