<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/Login" />
        <item
            android:id="@+id/nav_check"
            android:title="@string/Check" />
        <item
            android:id="@+id/nav_cate"
            android:title="@string/Cate" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/Contact" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/About" />
    </group>

</menu>
